FIX: fixes the z-index for the market cards

--- a/src/components/Market/Market.scss
+++ b/src/components/Market/Market.scss
@@ -12,6 +12,7 @@
     left: 50%;
     transform: translateX(-50%);
     perspective: 1000px;
+    z-index: 10;
 
     .card-wrapper {
         aspect-ratio: 180 / 265;
